test-suite/output/ErrorLocation_13241_1.v
Ltac a := intro.
Ltac b := a.
Goal True.
b.
Abort.
